now today error fixing